@@ -1,3 +1,6 @@
+2017-01-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Resolves #79047: Change of usergroup not possible
+
 2017-01-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #79381: Migrate to Doctrine
 	* Resolves #79380: Fix double translation of radio button labels
